--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ org.gradle.daemon=true
 org.gradle.caching=true
 android.experimental.cacheCompileLibResources=true
 # TODO: Experimental, remove if problems occur
-org.gradle.unsafe.configuration-cache=true
+#org.gradle.unsafe.configuration-cache=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
